Picture-in-Picture events are not fired when enter/exit the Picture-in-Picture mode through modern media controls https://bugs.webkit.org/show_bug.cgi?id=203933

Patch by Peng Liu <peng.liu6@apple.com> on 2019-11-08
Reviewed by Eric Carlson.

Covered by existing layout test cases. No new test is required.

* Modules/modern-media-controls/media/pip-support.js:
(PiPSupport.prototype.buttonWasPressed):
* Modules/pictureinpicture/HTMLVideoElementPictureInPicture.cpp:
(WebCore::HTMLVideoElementPictureInPicture::didEnterPictureInPicture):
(WebCore::HTMLVideoElementPictureInPicture::didExitPictureInPicture):

Canonical link: https://commits.webkit.org/217332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252240 268f45cc-cd09-0410-ab3c-d52691b4dbfc